add Configuration option